--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ dist/*
 build/*
 
 .idea/*
+pygame_gui/*
 
 # DEFAULT GITIGNORES
 
@@ -375,3 +376,4 @@ $RECYCLE.BIN/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/pygame_gui/
